--- a/app/EventDetails.html
+++ b/app/EventDetails.html
@@ -49,6 +49,7 @@
 		<option selected value="name">Nom de la session</option>
 		<option value="-upVoteCount">Nombre de participants</option>
 		<option value="price">Prix</option>
+		<option value="duration">Durée</option>
 		<!-- <option value="level">Niveau</option>
 		<option value="coach">coach sportif</option> -->
 	</select> <br/><br/>
@@ -90,9 +91,9 @@
 						<div class="well span9">
 							<h4 class ="well-title">{{session.name}}</h4>
 							<h6 style="margin-top:-10px">Coach : {{session.coach}}</h6>
-							<span>Durée : {{session.duration}}</span><br/>
+							<span>Durée : {{session.duration | durations}}</span><br/>
 							<span>Niveau : {{session.level}}</span><br/>
-							<span>Prix: {{session.price | currency : "€"}}</span><br/>
+							<span>Prix: {{session.price | currency : "€"}}</span><br/><br/>
 							<p>{{session.abstract}}</p>
 						</div>
 				</div>
@@ -110,6 +111,7 @@
 <script src="/lib/angular/angular-sanitize.js" ></script>
 <script src="/js/app.js" ></script>
 <script src="/js/controllers/EventController.js" ></script>
+<script src="/js/filters.js" ></script>
 
 
 </body>
