--- a/app/EventDetails.html
+++ b/app/EventDetails.html
@@ -18,8 +18,12 @@
 		</div>
 	</div>
 	<div ng-controller="EventController" style="padding-left:20px; padding-right:20px">
+
+
+
 	<img ng-show ="boolValue" ng-src="{{event.imageUrl}}" alt="{{event.name}}"/>
 	<!-- <img ng-hide ="boolValue" ng-src="{{event.imageUrl}}" alt="{{event.name}}"/> -->
+	<button type="button" class="btn btn-primary" ng-click="scrollToSession()">Scroll</button>
 	<div class ="row">
 		<div class="spann11">
 			<h2 ng-style="mystyle">{{event.name}}</h2>
@@ -75,7 +79,7 @@
 	</table>
 
 	<ul class="thumbnails">
-		<li ng-repeat="session in event.sessions | orderBy:sortorder | filter:query">
+		<li ng-repeat="session in event.sessions | orderBy:sortorder | filter:query" class="span11" id="session{{session.id}}">
 				
 				<div class="row session">
 						<div class="span0 well votingWidget">
@@ -110,6 +114,7 @@
 <script src="/lib/bootstrap.min.js" ></script>
 <script src="/lib/angular/angular.js" ></script>
 <script src="/lib/angular/angular-sanitize.js" ></script>
+<script src="/lib/angular/angular-resource.js" ></script>
 <script src="/js/app.js" ></script>
 <script src="/js/services/EventData.js" ></script>
 <script src="/js/controllers/EventController.js" ></script>
