Cache, exception Handler

--- a/app/EventDetails.html
+++ b/app/EventDetails.html
@@ -23,7 +23,7 @@
 
 	<img ng-show ="boolValue" ng-src="{{event.imageUrl}}" alt="{{event.name}}"/>
 	<!-- <img ng-hide ="boolValue" ng-src="{{event.imageUrl}}" alt="{{event.name}}"/> -->
-	<button type="button" class="btn btn-primary" ng-click="scrollToSession()">Scroll</button>
+	<!-- <button type="button" class="btn btn-primary" ng-click="scrollToSession()">Scroll</button> -->
 	<div class ="row">
 		<div class="spann11">
 			<h2 ng-style="mystyle">{{event.name}}</h2>
